# TecProg

./: CMakeLists.txt  README.md
assets/Stages/Cave/: cave.txt
assets/Stages/Moss/: mossbiome.txt
header/: Being.h  Game.h  Menu.h
header/Enemies/: Boss.h  Enemy.h  Enemy1.h  Enemy2.h  FireWorm.h
header/Entities/: Entity.h  Projectile.h
header/Entities/Characters/: Character.h  Player.h
header/Entities/Characters/Enemies/: Enemy.h  EvilWizard.h  FireWorm.h  Goblin.h  Mushroom.h
header/Entities/Obstacles/: Obstacle.h  Platform.h  Stalagmite.h  Thorn.h
header/Lists/: Element.h  EntitiesList.h  EntityList.h  List.h
header/Managers/: CollisionManager.h  GraphicManager.h
header/Stages/: DarkCave.h  MossBiome.h  Stage.h  Stage1.h  Stage2.h
source/: Being.cpp  Character.cpp  Game.cpp  Menu.cpp  Player.cpp  main.cpp
source/Enemies/: Enemy.cpp  Enemy1.cpp  Enemy2.cpp  EvilWizard.cpp  FireWorm.cpp  Mushroom.cpp
source/Entities/: Entity.cpp  Projectile.cpp
source/Entities/Characters/: Character.cpp  Player.cpp
source/Entities/Characters/Enemies/: Boss.cpp  Enemy.cpp  EvilWizard.cpp  FireWorm.cpp  Goblin.cpp  Mushroom.cpp
source/Entities/Obstacles/: Obstacle.cpp  Platform.cpp  Stalagmite.cpp  Thorn.cpp
source/Lists/: EntitiesList.cpp  EntityList.cpp
source/Managers/: CollisionManager.cpp  GraphicManager.cpp
source/Stages/: DarkCave.cpp  MossBiome.cpp  Stage.cpp  Stage1.cpp  Stage2.cpp
uml/: DiagramadeClasses.mdj  DiagramadeClasses1.mdj  DiagramadeClasses2.mdj  DiagramadeClasses3.mdj
