cmake_minimum_required(VERSION 3.20)
project(TecProg)

set(CMAKE_CXX_STANDARD 14)

include_directories(header)
include_directories(header/Enemies)
include_directories(header/Entities)
include_directories(header/Entities/Characters)
include_directories(header/Entities/Characters/Enemies)
include_directories(header/Entities/Obstacles)
include_directories(header/Lists)
include_directories(header/Managers)
include_directories(header/Stages)

add_executable(TecProg
        header/Entities/Characters/Enemies/Enemy.h
        header/Entities/Characters/Enemies/EvilWizard.h
        header/Entities/Characters/Enemies/Goblin.h
        header/Entities/Characters/Enemies/Mushroom.h
        header/Entities/Characters/Character.h
        header/Entities/Characters/Player.h
        header/Entities/Obstacles/Obstacle.h
        header/Entities/Obstacles/Platform.h
        header/Entities/Obstacles/Stalagmite.h
        header/Entities/Obstacles/Thorn.h
        header/Entities/Entity.h
        header/Entities/Projectile.h
        header/Lists/Element.h
        header/Lists/EntityList.h
        header/Lists/List.h
        header/Managers/CollisionManager.h
        header/Managers/GraphicManager.h
        header/Stages/DarkCave.h
        header/Stages/MossBiome.h
        header/Stages/Stage.h
        header/Being.h
        header/Game.h
        header/Menu.h
        source/Entities/Characters/Enemies/Enemy.cpp
        source/Entities/Characters/Enemies/EvilWizard.cpp
        source/Entities/Characters/Enemies/FireWorm.cpp
        source/Entities/Characters/Enemies/Goblin.cpp
        source/Entities/Characters/Enemies/Mushroom.cpp
        source/Entities/Characters/Character.cpp
        source/Entities/Characters/Player.cpp
        source/Entities/Obstacles/Obstacle.cpp
        source/Entities/Obstacles/Platform.cpp
        source/Entities/Obstacles/Stalagmite.cpp
        source/Entities/Obstacles/Thorn.cpp
        source/Entities/Entity.cpp
        source/Entities/Projectile.cpp
        source/Lists/EntityList.cpp
        source/Managers/CollisionManager.cpp
        source/Managers/GraphicManager.cpp
        source/Stages/DarkCave.cpp
        source/Stages/MossBiome.cpp
        source/Stages/Stage.cpp
        source/Being.cpp
        source/Game.cpp
        source/Menu.cpp
        )
